# starBackground

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  makefile
debug/: README.md  README.txt
documents/: new_ideas.txt
documents/old/: ui_old.cpp
old/: parallel.cpp
src/: game.cpp  imgplayer.cpp  main.cpp  makefile  parallel.cpp  star.cpp  test.cpp  ui.cpp  videoplayer.cpp
src/debug/: README.txt
src/headers/: game.h  imgplayer.h  imgplayer.hpp  parallel.h  parallel.hpp  star.h  star.hpp  ui.h  ui.hpp  videoplayer.hpp
